@@ -16,11 +16,6 @@
     <proprietary />
   </lang>
   <autodetect>
-    <general>
-      <commandset>LDL,MLC,PML,DYN</commandset>
-      <manufacturer>Hewlett-Packard</manufacturer>
-      <model>psc 1200 series</model>
-    </general>
     <usb>
       <commandset>LDL,MLC,PML,DYN</commandset>
       <manufacturer>HP</manufacturer>
