@@ -1,5 +1,7 @@
 2010-05-06  Tim Waugh <twaugh@redhat.com>
 
+	* db/source/printer/HP-PSC_1400.xml: Removed incorrect IEEE
+	1284 Device ID (bug #536381).
 	* db/source/printer/HP-OfficeJet_6200.xml: Fixed typo in MDL
 	field (bug #215063).
 
